add description that appears in AWS Lambda web console

--- a/serverless.yml
+++ b/serverless.yml
@@ -9,6 +9,7 @@ provider:
 functions:
   check:
     handler: index.check
+    description: generate RSS feed from Tokyo Marathon web-site news
     events:
       - http:
           path: rss
